# sword-code-challenge

./: .dockerignore  .envrc  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  flake.nix  package.nix  pyproject.toml
clinical_recomendations/: __main__.py  _main.py
clinical_recommendations/: __main__.py  _main.py  consumer.py
clinical_recommendations/engine/: opa.py  recommendation.py
clinical_recommendations/events/: events.py  redis.py
clinical_recommendations/platform/healthcheck/: asynchronous.py  healthers.py  opa.py  postgres.py  protocol.py  redis.py  routes.py  types.py
clinical_recommendations/platform/logging/: hypercorn.py  structlog.py
clinical_recommendations/storage/: migrations.py  sqlc.yaml
clinical_recommendations/storage/postgresql/: models.py  queries.py  queries.sql
clinical_recommendations/storage/postgresql/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql
clinical_recommendations/storage/sqlite/: __init__.py  migrations.py  models.py  queries.py  queries.sql
clinical_recommendations/storage/sqlite/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql
misc/: dex.dev.yaml  opa-conf.yaml  opa-input.json
rules/: clinical_recommendations.rego  clinical_recommendations_test.rego
tests/platform/healthcheck/: asynchronous.py  asynchronous_test.py
